[mr-41311090][core] Implement worker and worker endpoints